// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMessageStyles adds a bottom padding for carousel page indicators 1`] = `
{
  "body": [
    {
      "color": "fuschia",
    },
    undefined,
    undefined,
  ],
  "buttonsContainer": {
    "backgroundColor": "teal",
  },
  "container": [
    [
      {
        "borderRadius": 1,
      },
      {},
      {},
    ],
    {
      "paddingBottom": 36,
    },
  ],
  "contentContainer": {
    "backgroundColor": "lightblue",
  },
  "header": [
    {
      "backgroundColor": "purple",
    },
    undefined,
    undefined,
  ],
  "iconButton": {
    "container": [
      {
        "backgroundColor": "blue",
      },
      undefined,
    ],
    "iconColor": undefined,
  },
  "image": [
    {
      "backgroundColor": "yellow",
    },
    undefined,
  ],
  "imageContainer": {
    "backgroundColor": "green",
  },
  "primaryButton": {
    "container": [Function],
    "text": [
      {
        "color": "pink",
      },
      {},
      {},
    ],
  },
  "secondaryButton": {
    "container": [Function],
    "text": [
      {
        "color": "pink",
      },
      {},
      {},
    ],
  },
  "textContainer": {
    "backgroundColor": "antiquewhite",
  },
  "wrapper": [
    {
      "backgroundColor": "gray",
    },
    {
      "backgroundColor": "red",
    },
    {},
    {},
  ],
}
`;

exports[`getMessageStyles returns the expected output in the happy path 1`] = `
{
  "body": [
    {
      "color": "fuschia",
    },
    {
      "textAlign": "left",
    },
    {
      "color": "white",
    },
  ],
  "buttonsContainer": {
    "backgroundColor": "teal",
  },
  "container": [
    {
      "borderRadius": 1,
    },
    {
      "borderRadius": 2,
    },
    {
      "borderRadius": 3,
    },
  ],
  "contentContainer": {
    "backgroundColor": "lightblue",
  },
  "header": [
    {
      "backgroundColor": "purple",
    },
    {
      "textAlign": "center",
    },
    {
      "backgroundColor": "lightpink",
    },
  ],
  "iconButton": {
    "container": [
      {
        "backgroundColor": "blue",
      },
      {
        "backgroundColor": "turquoise",
      },
    ],
    "iconColor": "darkcyan",
  },
  "image": [
    {
      "backgroundColor": "yellow",
    },
    {
      "backgroundColor": "royalblue",
    },
  ],
  "imageContainer": {
    "backgroundColor": "green",
  },
  "primaryButton": {
    "container": [Function],
    "text": [
      {
        "color": "pink",
      },
      {
        "color": "olive",
      },
      {
        "color": "black",
      },
    ],
  },
  "secondaryButton": {
    "container": [Function],
    "text": [
      {
        "color": "pink",
      },
      {
        "color": "peru",
      },
      {
        "color": "orchid",
      },
    ],
  },
  "textContainer": {
    "backgroundColor": "antiquewhite",
  },
  "wrapper": [
    {
      "backgroundColor": "gray",
    },
    {
      "backgroundColor": "red",
    },
    {
      "backgroundColor": "lightgray",
    },
    {
      "backgroundColor": "lawngreen",
    },
  ],
}
`;

exports[`getPayloadStyle returns the expected output in the happy path 1`] = `
{
  "body": {
    "textAlign": "left",
  },
  "container": {
    "backgroundColor": "lightgray",
    "borderRadius": 2,
  },
  "header": {
    "textAlign": "center",
  },
  "primaryButton": {
    "backgroundColor": "salmon",
    "color": "olive",
  },
  "secondaryButton": {
    "backgroundColor": "sand",
    "color": "peru",
  },
}
`;
